Project bizsearch {
	database_type: 'PostgreSQL'
	Note: 'A business search API server to help manage and find business and its review'
}

Table users {
	id bigint [pk, increment, unique]

	name varchar(127) [not null]
	image_url varchar(255) [not null]

	created_date timestamp [not null, default: `now()`]
	updated_date timestamp [not null, default: `now()`]
}

Table businesses {
	id bigint [pk, increment, unique]

	alias varchar(127) [unique, not null]
	name varchar(255) [not null]
	image_url varchar(255) [not null]
	transactions transaction_type [not null, note: 'array of transaction_type']
	latitude float [not null]
	longitude float [not null]
	price price_type [not null]
	location_address_1 varchar(255) [not null]
	location_address_2 varchar(255)
	location_address_3 varchar(255)
	city varchar(255) [not null]
	zip_code varchar(7) [not null]
	country varchar(3) [not null]
	state varchar(3) [not null]
	display_address varchar(255) [not null]
	phone varchar(31) [not null]
	display_phone varchar(31) [not null]

	created_date timestamp [not null, default: `now()`]
	updated_date timestamp [not null, default: `now()`]
}

Enum price_type {
	"$"
	"$$"
	"$$$"
	"$$$$"
	"$$$$$"
}

Enum transaction_type {
	pickup
	delivery
}

Table categories {
	id bigint [pk, increment, unique]

	title varchar(127) [not null]
	alias varchar(127) [not null, unique]

	created_date timestamp [not null, default: `now()`]
	updated_date timestamp [not null, default: `now()`]
}

Table business_categories {
	id bigint [pk, increment, unique]

	business_id bigint [not null, ref: < businesses.id]
	category_id bigint [not null, ref: < categories.id]

	created_date timestamp [not null, default: `now()`]
	updated_date timestamp [not null, default: `now()`]
}

Table reviews {
	id bigint [pk, increment, unique]

	text text [not null]
	rating int [not null]
	user_id bigint [not null, ref: < users.id]
	business_id bigint [not null, ref: < businesses.id]

	created_date timestamp [not null, default: `now()`]
	updated_date timestamp [not null, default: `now()`]
}
